--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin
     xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com.chariotsolutions.nfc.plugin"
+    id="br.com.neton.nfc.plugin"
     version="0.6.0">
 
     <name>NFC</name>
@@ -11,8 +11,8 @@
 
     <license>MIT</license>
     <keywords>nfc, NFC, NDEF</keywords>
-    <repo>https://github.com/chariotsolutions/phonegap-nfc.git</repo>
-    <issue>https://github.com/chariotsolutions/phonegap-nfc/issues</issue>
+    <repo>https://github.com/oaugustus/nfc-plugin.git</repo>
+    <issue>https://github.com/oaugustus/nfc-plugin/issues</issue>
 
     <!-- temp remove engines tag due to bug CB-5139 in cli 3.1.0-0.2.0 for blackberry 10
     <engines>
@@ -29,7 +29,7 @@
         <!-- requires Cordova-2.8.0 -->
         <config-file target="res/xml/config.xml" parent="/widget">
             <feature name="NfcPlugin">
-                <param name="android-package" value="com.chariotsolutions.nfc.plugin.NfcPlugin"/>
+                <param name="android-package" value="br.com.neton.nfc.plugin.NfcPlugin"/>
                 <param name="onload" value="true" />
             </feature>
         </config-file>
@@ -82,7 +82,7 @@
 
         <config-file target="www/config.xml" parent="/widget">
             <!-- Note: mapping is broken in Cordova 3.1.0-0.2.0 -->
-            <feature name="NfcPlugin" value="com.chariotsolutions.nfc.plugin" />
+            <feature name="NfcPlugin" value="br.com.neton.nfc.plugin" />
         </config-file>
     </platform>
 
